# upgraded-pancake

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.cargo/: config
ci/: before_deploy.ps1  before_deploy.sh
front-end/: package-lock.json  package.json  test.txt
front-end/public/: index.html  manifest.json
front-end/src/: App.css  App.js  index.js
front-end/src/components/: ChooseComponent.js  CreateComponent.js  GenerateTable.js  HomeComponent.js  RollComponent.js  Table.js
front-end/src/components/routes/: ChooseComponent.js  CreateComponent.js  EditComponent.js  EditTableComponent.js  RollComponent.js
front-end/src/components/routes/components/: LinkBtn.js  Table.js  TableCreator.js  TableEditor.js
front-end/src/styles/: App.css  index.css
lib/: Cargo.toml
lib/src/: column.rs  constants.rs  dice.rs  error.rs  lib.rs  range.rs  roll.rs  row.rs  strings.rs  table.rs  table_result.rs
lib/src/dice/: test.rs
lib/src/row/: mod.rs  row.rs  validation.rs
lib/src/table/: complex_row.rs  dice.rs  die.rs  mod.rs  range.rs  roll.rs  row.rs  simple_row.rs  strings.rs  table_result.rs  tests.rs
lib/src/utils/: constants.rs  mod.rs
server/: Cargo.toml
server/src/: error.rs  files.rs  main.rs  response.rs  table.rs  tables.rs  test.rs
static/: index.html  test.txt
test_data/complex/: ranges_multiple.json  ranges_single.json
test_data/errors/range/: oob_less.json  oob_more.json  unsorted.json
test_data/errors/single/: oob_less.json  unsorted.json
test_data/lib/complex/: mixed_multiple.json  mixed_single.json  value_multiple.json  value_single.json
test_data/lib/errors/range/: duplicate.json
test_data/lib/errors/single/: duplicate.json  oob_more.json
test_data/lib/simple/: mixed_single.json  ranges_multiple.json  ranges_single.json
test_data/server/simple/: value_single.json
test_data/simple/: mixed_multiple.json  value_multiple.json  value_single.json
webserver/: Cargo.toml
webserver/src/: main.rs  tables.rs
