cargo-features = ["edition"]

[package]
name = "upgraded-pancake"
version = "0.1.0"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]
description = "A library to create and roll on roll tables."
homepage = "https://github.com/svmnotn/upgraded-pancake"
repository = "https://github.com/svmnotn/upgraded-pancake"
readme = "../README.md"
keywords = ["table roller"]
license = "MIT"
edition = "2018"

[dependencies]
serde = "1.0.75"
serde_derive = "1.0.75"
rand = "0.5.5"

[dev-dependencies]
serde_json = "1.0.26"
