[package]
name = "upgraded-pancake-server"
version = "0.1.0"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]

[dependencies]
upgraded-pancake = { path = "../lib" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0.24"
rand = "0.5.4"
