[package]
name = "upgraded-pancake-server"
version = "0.1.0"
authors = ["Victor M. Suarez <svmnotn@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
serde_json = "1.0.24"
serde = "1.0.70"
serde_derive = "1.0.70"
rand = "0.5.4"
